--- a/DWC-task1.css
+++ b/DWC-task1.css
@@ -9,30 +9,31 @@
 }
 
 main {
-  margin: 50px;
+  width: 960px;
+  margin: 50px auto;
   display: flex;
-  justify-content: center;
 }
 
 .box {
   width: 300px;
   margin-right: 30px;
+  padding: 10px;
   background-color: #eeeeee;
   position: relative;
 }
 
-.box:nth-child(3) {
-  margin-right: 30px;
+.box:nth-last-child(0) {
+  margin-right: 0;
 }
 
 .box-index {
   color: white;
   position: absolute;
   top: 0;
+  left: 0;
 }
 
-.box-type {
-  margin: 10px 10px 0 10px;
+.box-img-type {
   height: 150px;
   background-size: cover;
   background-position: bottom;
@@ -60,4 +61,26 @@ footer {
 
 .orange {
   background-color: #ff9a4b;
+}
+
+/* レスポンシブ対応のためのメディアクエリ設定 */
+@media screen and (max-width: 768px) {
+  .header-area {
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+    margin: 50px 0;
+    display: block;
+  }
+
+  .box {
+    width: 90%;
+    margin: 20px 5%;
+  }
+
+  footer {
+    width: 100%;
+  }
 }
